--- a/index.html
+++ b/index.html
@@ -6,21 +6,7 @@
 </head>
 
 <body>
-    <div class="content">
-        <div class="content__container">
-            <p class="content__container__text">
-                Hi I am  
-            </p>
-
-            <ul class="content__container__list">
-                <li class="content__container__list__item">Chiranjeev Gupta </li>
-                <li class="content__container__list__item">web developer !</li>
-                <li class="content__container__list__item">foss advocate !</li>
-                <li class="content__container__list__item">ML enthusiast !</li>
-                <li class="content__container__list__item">terrible singer !</li>
-            </ul>
-        </div>
-    </div>
+    <app-root></app-root>
 <script type="text/javascript" src="runtime.js"></script><script type="text/javascript" src="polyfills.js"></script><script type="text/javascript" src="styles.js"></script><script type="text/javascript" src="vendor.js"></script><script type="text/javascript" src="main.js"></script></body>
 
 </html>
