--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
 
 <body>
     <app-root></app-root>
-<script type="text/javascript" src="runtime.js"></script><script type="text/javascript" src="polyfills.js"></script><script type="text/javascript" src="styles.js"></script><script type="text/javascript" src="vendor.js"></script><script type="text/javascript" src="main.js"></script></body>
+<script type="text/javascript" src="docs/runtime.js"></script><script type="text/javascript" src="docs/polyfills.js"></script><script type="text/javascript" src="docs/styles.js"></script><script type="text/javascript" src="docs/vendor.js"></script><script type="text/javascript" src="docs/main.js"></script></body>
 
 </html>
